<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:iconSpaceReserved="false">

    <EditTextPreference
        android:key="@string/key_name"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/nothing"
        android:title="@string/setname"
        app:iconSpaceReserved="false" />

    <EditTextPreference
        android:inputType="textEmailAddress"
        android:key="@string/key_email"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/nothing"
        android:title="@string/setemail"
        app:iconSpaceReserved="false" />

    <EditTextPreference
        android:inputType="textEmailAddress"
        android:key="@string/key_githubuser"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/nothing"
        android:title="@string/setgithubuser"
        app:iconSpaceReserved="false" />

    <EditTextPreference
        android:inputType="textEmailAddress"
        android:key="@string/key_token"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:summary="@string/nothing"
        android:title="@string/settoken"
        app:iconSpaceReserved="false" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="@string/key_job"
        android:title="@string/is_job"
        app:iconSpaceReserved="false" />

</PreferenceScreen>